
  [ Jordi Mallach ]
  * Install bgfx, language, plugins and uismall.bdf files in mame-data.
    Thanks to Vas Crabb for pointing this out.
  * Add a override_dh_auto_test that just runs "mame -valid" after the build.
    For now, make it non-fatal.
  * Add some additional docs to the mame binary.
  * Use system libuv.
  * Install default plugin.ini and ui.ini files as examples.

 -- Cesare Falco <c.falco@ubuntu.com>  Fri, 08 Jul 2016 13:08:40 +0200

mame (0.175-1) unstable; urgency=medium

  * New upstream release.
  * Rename and extend mips64el patch to attempt to fix alpha's similar
    build failure.
  * Build with included portmidi on kfreebsd-* architectures, as system
    libportmidi-dev is not available on these.
  * Add -ldl to LDFLAGS on kFreeBSD to fix an early build failure.
  * Make GENIEOS=freebsd so the actual genie binary is called.

 -- Jordi Mallach <jordi@debian.org>  Tue, 05 Jul 2016 18:14:40 +0200

mame (0.174-1) unstable; urgency=medium

  [ Cesare Falco ]
  * New upstream release (LP: #1590678) (LP: #1562705)
  * Removed patches now included upstream
  * debian/rules:
    - x32 has 32bit pointers, split amd64 rule
    - reduce memory required by ld on all archs (Ubuntu)
    - remove -g gcc switch when no DEBUG required

  [ Jordi Mallach ]
  * debian/rules: don't set PTR64 on mips64el.
  * Add removing-m64_flag_for_mips64el.patch: avoid using -m64 on mips64el
    to fix a FTBFS. Thanks to Daniel Knezevic for the patch (closes: #827798).

 -- Jordi Mallach <jordi@debian.org>  Mon, 04 Jul 2016 16:05:33 +0200

mame (0.173-6) unstable; urgency=medium

  * Brown paper bag release.
  * Revert x32 change in -5 that broke amd64 build.
  * Substitute all uses of DEB_HOST_ARCH with DEB_BUILD_ARCH.

 -- Jordi Mallach <jordi@debian.org>  Sat, 21 May 2016 02:43:43 +0200

mame (0.173-5) unstable; urgency=medium

  * Fix syntax error in arch_ppc_fixes.patch. Hopefully fixes ppc64el build.
  * Try to fix x32 by defining PTR64 as in amd64.
